@@ -162,6 +162,70 @@ operator|.
 name|class
 argument_list|)
 decl_stmt|;
+DECL|field|DEBUG_MESSAGE
+specifier|private
+specifier|static
+specifier|final
+name|ThreadLocal
+argument_list|<
+name|StringBuilder
+argument_list|>
+name|DEBUG_MESSAGE
+init|=
+operator|new
+name|ThreadLocal
+argument_list|<
+name|StringBuilder
+argument_list|>
+argument_list|()
+block|{
+specifier|protected
+name|StringBuilder
+name|initialValue
+parameter_list|()
+block|{
+return|return
+operator|new
+name|StringBuilder
+argument_list|()
+return|;
+block|}
+block|}
+decl_stmt|;
+DECL|method|logDebugMessage ()
+specifier|private
+specifier|static
+name|void
+name|logDebugMessage
+parameter_list|()
+block|{
+specifier|final
+name|StringBuilder
+name|b
+init|=
+name|DEBUG_MESSAGE
+operator|.
+name|get
+argument_list|()
+decl_stmt|;
+name|LOG
+operator|.
+name|debug
+argument_list|(
+name|b
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|b
+operator|.
+name|setLength
+argument_list|(
+literal|0
+argument_list|)
+expr_stmt|;
+block|}
 DECL|field|MIN_ARRAY_LENGTH
 specifier|static
 specifier|final
@@ -556,15 +620,30 @@ parameter_list|()
 throws|throws
 name|InterruptedException
 block|{
+if|if
+condition|(
 name|LOG
 operator|.
-name|debug
+name|isDebugEnabled
+argument_list|()
+condition|)
+block|{
+name|DEBUG_MESSAGE
+operator|.
+name|get
+argument_list|()
+operator|.
+name|append
 argument_list|(
-literal|", {}"
-argument_list|,
+literal|", "
+argument_list|)
+operator|.
+name|append
+argument_list|(
 name|this
 argument_list|)
 expr_stmt|;
+block|}
 for|for
 control|(
 init|;
@@ -574,25 +653,55 @@ name|maxAllocated
 condition|;
 control|)
 block|{
+if|if
+condition|(
 name|LOG
 operator|.
-name|debug
+name|isDebugEnabled
+argument_list|()
+condition|)
+block|{
+name|DEBUG_MESSAGE
+operator|.
+name|get
+argument_list|()
+operator|.
+name|append
 argument_list|(
 literal|": wait ..."
 argument_list|)
 expr_stmt|;
+name|logDebugMessage
+argument_list|()
+expr_stmt|;
+block|}
 name|wait
 argument_list|()
 expr_stmt|;
+if|if
+condition|(
 name|LOG
 operator|.
-name|debug
+name|isDebugEnabled
+argument_list|()
+condition|)
+block|{
+name|DEBUG_MESSAGE
+operator|.
+name|get
+argument_list|()
+operator|.
+name|append
 argument_list|(
-literal|"wake up: {}"
-argument_list|,
+literal|"wake up: "
+argument_list|)
+operator|.
+name|append
+argument_list|(
 name|this
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 name|numAllocated
 operator|++
@@ -607,17 +716,32 @@ operator|.
 name|poll
 argument_list|()
 decl_stmt|;
+if|if
+condition|(
 name|LOG
 operator|.
-name|debug
+name|isDebugEnabled
+argument_list|()
+condition|)
+block|{
+name|DEBUG_MESSAGE
+operator|.
+name|get
+argument_list|()
+operator|.
+name|append
 argument_list|(
-literal|", recycled? {}"
-argument_list|,
+literal|", recycled? "
+argument_list|)
+operator|.
+name|append
+argument_list|(
 name|array
 operator|!=
 literal|null
 argument_list|)
 expr_stmt|;
+block|}
 return|return
 name|array
 operator|!=
@@ -661,15 +785,30 @@ operator|==
 name|byteArrayLength
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
 name|LOG
 operator|.
-name|debug
+name|isDebugEnabled
+argument_list|()
+condition|)
+block|{
+name|DEBUG_MESSAGE
+operator|.
+name|get
+argument_list|()
+operator|.
+name|append
 argument_list|(
-literal|", {}"
-argument_list|,
+literal|", "
+argument_list|)
+operator|.
+name|append
+argument_list|(
 name|this
 argument_list|)
 expr_stmt|;
+block|}
 name|notify
 argument_list|()
 expr_stmt|;
@@ -702,13 +841,25 @@ operator|-
 name|numAllocated
 condition|)
 block|{
+if|if
+condition|(
 name|LOG
 operator|.
-name|debug
+name|isDebugEnabled
+argument_list|()
+condition|)
+block|{
+name|DEBUG_MESSAGE
+operator|.
+name|get
+argument_list|()
+operator|.
+name|append
 argument_list|(
 literal|", freeQueue.offer"
 argument_list|)
 expr_stmt|;
+block|}
 name|freeQueue
 operator|.
 name|offer
@@ -1108,15 +1259,35 @@ operator|>=
 literal|0
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
 name|LOG
 operator|.
-name|debug
+name|isDebugEnabled
+argument_list|()
+condition|)
+block|{
+name|DEBUG_MESSAGE
+operator|.
+name|get
+argument_list|()
+operator|.
+name|append
 argument_list|(
-literal|"allocate({})"
-argument_list|,
+literal|"allocate("
+argument_list|)
+operator|.
+name|append
+argument_list|(
 name|arrayLength
 argument_list|)
+operator|.
+name|append
+argument_list|(
+literal|")"
+argument_list|)
 expr_stmt|;
+block|}
 specifier|final
 name|byte
 index|[]
@@ -1191,21 +1362,39 @@ argument_list|,
 name|aboveThreshold
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
 name|LOG
 operator|.
-name|debug
+name|isDebugEnabled
+argument_list|()
+condition|)
+block|{
+name|DEBUG_MESSAGE
+operator|.
+name|get
+argument_list|()
+operator|.
+name|append
 argument_list|(
-literal|": count={}, {}Threshold"
-argument_list|,
+literal|": count="
+argument_list|)
+operator|.
+name|append
+argument_list|(
 name|count
-argument_list|,
+argument_list|)
+operator|.
+name|append
+argument_list|(
 name|aboveThreshold
 condition|?
-literal|"above"
+literal|", aboveThreshold"
 else|:
-literal|"below"
+literal|", belowThreshold"
 argument_list|)
 expr_stmt|;
+block|}
 name|array
 operator|=
 name|manager
@@ -1224,17 +1413,40 @@ name|powerOfTwo
 index|]
 expr_stmt|;
 block|}
+if|if
+condition|(
 name|LOG
 operator|.
-name|debug
+name|isDebugEnabled
+argument_list|()
+condition|)
+block|{
+name|DEBUG_MESSAGE
+operator|.
+name|get
+argument_list|()
+operator|.
+name|append
 argument_list|(
-literal|", return byte[{}]"
-argument_list|,
+literal|", return byte["
+argument_list|)
+operator|.
+name|append
+argument_list|(
 name|array
 operator|.
 name|length
 argument_list|)
+operator|.
+name|append
+argument_list|(
+literal|"]"
+argument_list|)
 expr_stmt|;
+name|logDebugMessage
+argument_list|()
+expr_stmt|;
+block|}
 return|return
 name|array
 return|;
@@ -1260,17 +1472,32 @@ argument_list|(
 name|array
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
 name|LOG
 operator|.
-name|debug
+name|isDebugEnabled
+argument_list|()
+condition|)
+block|{
+name|DEBUG_MESSAGE
+operator|.
+name|get
+argument_list|()
+operator|.
+name|append
 argument_list|(
-literal|"recycle: array.length={}"
-argument_list|,
+literal|"recycle: array.length="
+argument_list|)
+operator|.
+name|append
+argument_list|(
 name|array
 operator|.
 name|length
 argument_list|)
 expr_stmt|;
+block|}
 specifier|final
 name|int
 name|freeQueueSize
@@ -1324,15 +1551,33 @@ name|array
 argument_list|)
 expr_stmt|;
 block|}
+if|if
+condition|(
 name|LOG
 operator|.
-name|debug
+name|isDebugEnabled
+argument_list|()
+condition|)
+block|{
+name|DEBUG_MESSAGE
+operator|.
+name|get
+argument_list|()
+operator|.
+name|append
 argument_list|(
-literal|", freeQueueSize={}"
-argument_list|,
+literal|", freeQueueSize="
+argument_list|)
+operator|.
+name|append
+argument_list|(
 name|freeQueueSize
 argument_list|)
 expr_stmt|;
+name|logDebugMessage
+argument_list|()
+expr_stmt|;
+block|}
 return|return
 name|freeQueueSize
 return|;
