@@ -1635,6 +1635,9 @@ Release 2.8.0 - UNRELEASED
     HDFS-9379. Make NNThroughputBenchmark$BlockReportStats support more than 10
     datanodes. (Mingliang Liu via Arpit Agarwal)
 
+    HDFS-9398. Make ByteArraryManager log message in one-line format.
+    (Mingliang Liu via szetszwo)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
